--- a/src/app/components/notfound/notfound.component.html
+++ b/src/app/components/notfound/notfound.component.html
@@ -1,1 +1,27 @@
-<p>notfound works!</p>
+<section
+  class="container mx-auto flex items-center justify-center min-h-[100vh]"
+>
+  <div class="pt-5 text-center">
+    <div>
+      <h2 class="font-extrabold text-[40px] text-slate-600 dark:text-slate-100">
+        Page Not Found
+      </h2>
+      <h2
+        class="font-extrabold md:text-[40px] text-[30px] text-slate-600 dark:text-slate-100"
+      >
+        Look like you are lost !
+      </h2>
+    </div>
+    <div class="flex items-center justify-center">
+      <img src="./assets/images/lost.png" alt="404" />
+    </div>
+    <div>
+      <button
+        class="btn font-bold text-white bg-[#01b1ac] hover:bg-[#02c7ac] dark:bg-[#02c7ac] dark:hover:bg-[#01b1ac]"
+        routerLink="/home"
+      >
+        Back To Home
+      </button>
+    </div>
+  </div>
+</section>
