--- a/src/app/components/nav-guest/nav-guest.component.html
+++ b/src/app/components/nav-guest/nav-guest.component.html
@@ -1,5 +1,5 @@
 <div
-  class="py-5 bg-slate-900 fixed top-0 left-0 right-0 z-40 border-b-4 border-b-red-600 dark:bg-black"
+  class="py-5 bg-slate-900 fixed top-0 left-0 right-0 z-40 border-b-4 border-b-red-600 dark:bg-[#2C394B] dark:border-b-[#FF4C29]"
 >
   <nav
     class="lg:container px-3 md:px-0 mx-auto text-white flex items-center justify-between"
@@ -15,19 +15,13 @@
     </div>
 
     <!-- * links -->
-    <div class="links dark:bg-black" [class.hidden]="menuOpen">
+    <div class="links dark:bg-[#2C394B]" [class.hidden]="menuOpen">
       <ul class="flex md:flex-row flex-col items-center md:gap-[1vw] gap-6">
         <li
           (click)="toggleNav()"
           class="tracking-wide font-medium text-1xl hover:text-gray-500 transition"
         >
           <a routerLink="home">Home</a>
-        </li>
-        <li
-          (click)="toggleNav()"
-          class="tracking-wide font-medium text-1xl hover:text-gray-500 transition"
-        >
-          <a routerLink="category">Category</a>
         </li>
 
         <li
@@ -62,11 +56,11 @@
         </li>
       </ul>
     </div>
-  
+
     <!-- * sign in -->
     <div class="text-center flex">
       <button
-        class="bg-red-800 px-5 py-2 rounded-full transition hover:bg-red-400 mx-3"
+        class="bg-red-800 px-5 py-2 rounded-full transition hover:bg-red-400 mx-3 dark:bg-[#FF4C29] dark:hover:bg-[#FF9800]"
         routerLink="login"
       >
         Sign In
