--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -3,14 +3,14 @@
 <!--*  -->
 <!--*  -->
 
-<section class="container mx-auto dark:text-gray-300 ">
+<section class="container mx-auto dark:text-gray-300">
   <div
-    class="flex md:flex-col lg:flex-row lg:pt-12 items-center justify-center  "
+    class="flex md:flex-col lg:flex-row lg:pt-12 items-center justify-center"
   >
     <div
-      class="w-full lg:w-[30%] bg-[#f7f7f7] shadow-sm dark:shadow-gray-400 rounded-xl  dark:bg-neutral-900 p-6"
+      class="w-full lg:w-[30%] bg-[#f7f7f7] shadow-sm dark:shadow-gray-400 rounded-xl dark:bg-[#313b4b] p-6"
     >
-      <div class="pt-12 text-center">
+      <div class="text-center">
         <h2
           class="font-extrabold text-[30px] text-slate-700 dark:text-gray-300"
         >
@@ -25,7 +25,7 @@
           class="pt-2 font-semibold text-[20px] text-slate-600 dark:text-gray-300"
         >
           <span
-            class="text-red-600 font-extrabold cursor-pointer hover:text-red-500 transition"
+            class="text-red-600 font-extrabold cursor-pointer hover:text-red-500 transition dark:text-[#FF4C29] dark:hover:text-[#FF9800]"
             routerLink="/guest/login"
             >Login</span
           >
@@ -36,13 +36,13 @@
       <form
         [formGroup]="registerForm"
         (ngSubmit)="handleForm()"
-        class="bg-white py-8 px-6 shadow rounded-lg dark:bg-neutral-900 mt-4 "
+        class="bg-white px-6 shadow rounded-lg dark:bg-[#313b4b] mt-4"
       >
         <h3 class="font-bold text-[20px] text-gray-700 dark:text-white">
           Register Form
         </h3>
 
-        <div>
+        <div class="my-2">
           <label
             for="name"
             class="block text-sm font-medium text-gray-600 dark:text-gray-300"
@@ -52,7 +52,7 @@
             formControlName="name"
             type="text"
             id="name"
-            class="input font-bold dark:bg-[#1e1e1e]"
+            class="input font-bold dark:bg-white"
           />
         </div>
 
@@ -74,7 +74,7 @@
           </p>
         </div>
 
-        <div class="">
+        <div class="my-2">
           <label
             for="mail"
             class="block text-sm font-medium text-gray-600 dark:text-gray-300"
@@ -84,7 +84,7 @@
             formControlName="email"
             type="email"
             id="mail"
-            class="input font-bold dark:bg-[#1e1e1e]"
+            class="input font-bold dark:bg-white"
           />
         </div>
 
@@ -103,7 +103,7 @@
           </p>
         </div>
 
-        <div>
+        <div class="my-2">
           <label
             for="password"
             class="block text-sm font-medium text-gray-600 dark:text-gray-300"
@@ -113,7 +113,7 @@
             formControlName="password"
             type="password"
             id="password"
-            class="input font-bold dark:bg-[#1e1e1e]"
+            class="input font-bold dark:bg-white"
           />
         </div>
 
@@ -135,7 +135,7 @@
           </p>
         </div>
 
-        <div>
+        <div class="my-2">
           <label
             for="rePassword"
             class="block text-sm font-medium text-gray-600 dark:text-gray-300"
@@ -145,7 +145,7 @@
             formControlName="rePassword"
             type="password"
             id="rePassword"
-            class="input font-bold dark:bg-[#1e1e1e]"
+            class="input font-bold dark:bg-white"
           />
         </div>
 
@@ -170,7 +170,7 @@
           </p>
         </div>
 
-        <div>
+        <div class="my-2">
           <label
             for="phone"
             class="block text-sm font-medium text-gray-600 dark:text-gray-300"
@@ -180,7 +180,7 @@
             formControlName="phone"
             type="tel"
             id="phone"
-            class="input font-bold dark:bg-[#1e1e1e]"
+            class="input font-bold dark:bg-white"
           />
         </div>
 
@@ -200,8 +200,11 @@
         </div>
 
         <div class="d-flex justify-content-end">
+          <p *ngIf="errorMessage" class="text-center font-bold">
+            {{ errorMessage }}
+          </p>
           <button
-            class="btn bg-red-600 hover:bg-red-500 transition text-white mt-2 w-full"
+            class="btn bg-red-600 hover:bg-red-500 transition text-white mt-2 w-full dark:bg-[#FF4C29] dark:hover:bg-[#FF9800]"
             type="submit"
             [disabled]="registerForm.invalid"
           >
@@ -209,9 +212,6 @@
             <i *ngIf="isValid" class="fa-solid fa-spinner fa-spin"></i>
           </button>
         </div>
-        <p *ngIf="errorMessage" class="">
-          {{ errorMessage }}
-        </p>
       </form>
     </div>
     <div class="lg:w-[50%] hidden lg:block">
