--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,7 +1,7 @@
 <section
   class="flex flex-col md:flex-row md:items-center justify-center min-h-[95vh] bg-gray-300 dark:bg-[#15191d]"
 >
-  <div class="lg-w[60%] p-5 relative">
+  <div class="lg-w[60%] p-5 relative flex justify-center">
     <img [src]="photo" alt="user" class="lg:w-[400px] w-[300px] rounded-full" />
     <span
       class="absolute right-[60px] bottom-[60px] rounded-full py-2 px-2 bg-[#232b28] dark:bg-slate-500"
@@ -19,7 +19,7 @@
       ><i class="fa-solid fa-ban text-[25px] text-slate-200 cursor-pointer"> </i
     ></span>
   </div>
-  <div class="md:p-5 lg:w-[40%] px-5 md:px-0">
+  <div class="lg:w-[20%] p-5 shadow-xl shadow-slate-600 bg-slate-100 rounded-xl dark:bg-slate-800 dark:shadow-none">
     <h2 class="text-[40px] font-bold py-6 text-slate-700 dark:text-white">
       MY PROFILE
       <i
@@ -29,22 +29,24 @@
     </h2>
 
     <div class="pt-6">
-      <div class="flex flex-col lg:flex-row lg:justify-between">
+      <div class="flex flex-col">
         <div class="my-3">
-          <h2 class="font-bold text-[20px] text-gray-500">Name :</h2>
-          <span
-            class="border-b border-b-slate-500 text-slate-700 font-bold md:text-[25px] dark:text-gray-200"
-            >{{ userName }}</span
-          >
-          <span> </span>
+          <h2 class="font-bold text-[20px] text-gray-500">
+            Name :
+            <span
+              class="border-b  text-slate-700 font-bold dark:text-gray-200"
+              >{{ userName }}</span
+            >
+          </h2>
         </div>
         <div class="my-3">
-          <h2 class="font-bold text-[20px] text-gray-500">E-Mail :</h2>
-          <span
-            class="border-b border-b-slate-500 text-slate-700 font-bold md:text-[25px] dark:text-gray-200"
-            >{{ userEmail }}</span
-          >
-          <span> </span>
+          <h2 class="font-bold text-[20px] text-gray-500">
+            E-Mail :
+            <span
+              class="border-b  text-slate-700 font-bold dark:text-gray-200"
+              >{{ userEmail }}</span
+            >
+          </h2>
         </div>
       </div>
 
@@ -52,7 +54,7 @@
         <h2 class="font-bold text-[20px] text-gray-500">Phone :</h2>
         <div *ngIf="usernumber" class="mx-3">
           <span
-            class="border-b border-b-slate-500 text-slate-700 font-bold md:text-[25px] dark:text-gray-200"
+            class="border-b  text-slate-700 font-bold dark:text-gray-200"
             >{{ usernumber }}</span
           >
           <span> </span>
@@ -69,7 +71,7 @@
         <h2 class="font-bold text-[20px] text-gray-500">Age :</h2>
         <div *ngIf="userAge" class="mx-3">
           <span
-            class="border-b border-b-slate-500 text-slate-700 font-bold md:text-[25px] dark:text-gray-200"
+            class="border-b  text-slate-700 font-bold dark:text-gray-200"
             >{{ userAge }}</span
           >
           <span> </span>
@@ -86,7 +88,7 @@
         <h2 class="font-bold text-[20px] text-gray-500">Address :</h2>
         <div *ngIf="userAdress" class="mx-3">
           <span
-            class="border-b border-b-slate-500 text-slate-700 font-bold md:text-[25px] dark:text-gray-200"
+            class="border-b  text-slate-700 font-bold dark:text-gray-200"
             >{{ userAdress }}</span
           >
           <span> </span>
